fix: location icon alignment

--- a/src/app/features/properties/property-detail/property-detail.component.scss
+++ b/src/app/features/properties/property-detail/property-detail.component.scss
@@ -17,6 +17,10 @@
   margin-bottom: 1rem;
 }
 
+.property-detail-location-icon {
+  height: 24px;
+}
+
 .property-detail-location {
   font-size: 1.25rem;
   margin: 0;
